--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,7 @@
 
 title: Adrian Melic - Consultor de Inteligencia Artificial y Docente
 email: info@adrianmelic.com
-description: >-
-  Consultor de Inteligencia Artificial y Docente. Ayudando a empresas y estudiantes a surfear la ola de la IA y a implementarla en sus productos y día a día.
+description: Consultor de Inteligencia Artificial y Docente. Construyendo productos impulsados por IA. Ayudo a empresas y estudiantes a surfear esta ola.
 baseurl: ""
 url: "https://adrianmelic.com"
 twitter_username: adrianmelic
@@ -30,7 +29,7 @@ linkedin_username: adrianmelic
 
 
 # Build settings
-theme: cayman
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
